# climacli

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
climacli/: arguments.py  clima.py  climacli.py  user_data.py  usr_config_file_tst.py
