[metadata]
name = climacli
version = 0.0.1
author = Henrique Pinheiro
description = Command line app that shows real-time weather conditions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RiquePM/climacli
classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires = 
    requests >= 2.27.1
    rich >= 12.2.0

[options.entry_points]
console_scripts = 
    climacli = climacli.climacli:main